--- a/style/main.scss
+++ b/style/main.scss
@@ -8,7 +8,8 @@ $header4: 2.4rem;
 $header5: 1.2rem;
 $text: 2rem;
 $grey-text: #2c2c2c;
-$bg-color: #353a3e;
+$bg-color: #131919;
+$bg-color2: #353a3e;
 $prim-text-color: #ecfffb;
 $sec-text-color: #2d767f;
 $dark-card-color: #272b2e;
