--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -20,7 +20,7 @@ nav {
 	background: linear-gradient(to bottom right, $green1, $green2);
 	height: 100%;
 	width: 100%;
-	clip-path: circle(5px at 100% -10%);
+	clip-path: circle(50px at 100% -10%);
 	// display: none;
 }
 
@@ -167,17 +167,8 @@ body.hide {
 //HERO SECTION
 
 .hero-section {
-	min-height: 95vh;
+	// min-height: 80vh;
 	// margin-bottom: 5rem;
-	// background-image: linear-gradient(
-	// 		to bottom,
-	// 		rgba(0, 0, 0, 0.8),
-	// 		rgba(71, 71, 71, 0.8)
-	// 	),
-	// 	url("../img/Polygon6.png");
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
 	overflow-x: hidden;
 }
 
@@ -190,20 +181,22 @@ body.hide {
 .hero-title {
 	@include flex(center, center, column);
 	flex: 1 1 20rem;
-	margin: 4rem 2rem;
+	margin-bottom: 3rem;
 	h1 {
-		font-size: 6rem;
+		font-family: "Raleway", sans-serif;
+		font-size: 3rem;
 		text-align: left;
 		margin-bottom: 2rem;
 		margin-top: 4rem;
 	}
 	h2 {
-		font-size: 7rem;
+		font-size: 5rem;
 		margin-bottom: 2rem;
 	}
 }
 .hero-anim-section {
-	flex: 1 1 20rem;
+	margin-top: 10rem;
+	flex: 1 1 40rem;
 }
 .hero-anim {
 	@include flex(center, center, column);
