--- a/style/main.css
+++ b/style/main.css
@@ -767,23 +767,16 @@ footer h3 {
 }
 
 .logos-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   width: 80%;
   margin: auto;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .logo1,
@@ -1060,6 +1053,9 @@ body.light {
   .work-section {
     width: 60%;
     margin: auto;
+  }
+  .work-card {
+    min-width: 40%;
   }
   .skills-section,
   .photography {
