--- a/style/_global.scss
+++ b/style/_global.scss
@@ -65,15 +65,6 @@ a {
 	color: $grey-text;
 }
 
-.btn-cta {
-	border: none;
-	background: white;
-	padding: 2rem 6rem;
-	font-family: Georgia, "Times New Roman", Times, serif;
-	margin-top: 4rem;
-	border-radius: 4px;
-}
-
 .cta-btn {
 	padding: 1.5rem 4rem;
 	background: linear-gradient(to bottom right, $green1, $green2);
@@ -83,6 +74,11 @@ a {
 	font-weight: 600;
 	font-size: 1.8rem;
 	transition: all 200ms ease;
+	&:hover {
+		background: linear-gradient(to bottom right, #00ead6, #6effa3);
+		// color: $bg-color;
+		transform: scale(1.05);
+	}
 }
 
 // $green1: #00a295;
