--- a/style/main.css
+++ b/style/main.css
@@ -68,15 +68,6 @@ a {
   color: #2c2c2c;
 }
 
-.btn-cta {
-  border: none;
-  background: white;
-  padding: 2rem 6rem;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  margin-top: 4rem;
-  border-radius: 4px;
-}
-
 .cta-btn {
   padding: 1.5rem 4rem;
   background: -webkit-gradient(linear, left top, right bottom, from(#00a295), to(#5dd98a));
@@ -88,6 +79,13 @@ a {
   font-size: 1.8rem;
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
+}
+
+.cta-btn:hover {
+  background: -webkit-gradient(linear, left top, right bottom, from(#00ead6), to(#6effa3));
+  background: linear-gradient(to bottom right, #00ead6, #6effa3);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 nav {
@@ -112,8 +110,8 @@ nav {
   background: linear-gradient(to bottom right, #00a295, #5dd98a);
   height: 100%;
   width: 100%;
-  -webkit-clip-path: circle(50px at 100% -10%);
-          clip-path: circle(50px at 100% -10%);
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
 }
 
 .nav-header {
@@ -216,10 +214,6 @@ body.hide {
   font-weight: 700;
 }
 
-.nav-links li {
-  list-style-position: inside;
-}
-
 .nav-links > ul > li:hover {
   color: white;
 }
@@ -266,29 +260,9 @@ body.hide {
   margin-right: 2rem;
 }
 
-.nav-link-item h2:hover {
+.nav-link-item h2 {
   color: white;
-}
-
-.nav-link-item h2::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #000;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.nav-link-item h2:hover::before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
+  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .social-icons {
@@ -424,8 +398,6 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: -webkit-gradient(linear, left top, right bottom, from(#00a295), to(#5dd98a));
-  background: linear-gradient(to bottom right, #00a295, #5dd98a);
   padding: 2rem 0;
   overflow-x: hidden;
   width: 100%;
@@ -546,6 +518,7 @@ footer h3 {
   max-width: 10rem;
   min-width: 8rem;
   margin-bottom: 2rem;
+  margin-right: 2rem;
 }
 
 .work-card-header h2 {
@@ -659,6 +632,9 @@ footer h3 {
   display: -ms-grid;
   display: grid;
   justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1.8rem;
@@ -686,6 +662,12 @@ footer h3 {
 .icons-collection svg {
   -webkit-transition: all 250ms ease;
   transition: all 250ms ease;
+  width: 100%;
+  overflow: visible;
+}
+
+#test-svg {
+  overflow: visible;
 }
 
 .icons-collection:hover svg {
@@ -721,10 +703,11 @@ footer h3 {
 
 .skills-list li {
   list-style-position: inside;
-  list-style-image: url("../svg/iconmonstr-check-mark-1.svg");
+  list-style-image: url("../svg/check-white.svg");
   margin-bottom: 2rem;
   font-weight: 600;
   text-align: center;
+  color: white;
 }
 
 .icon-bg {
@@ -744,7 +727,7 @@ footer h3 {
 }
 
 .client-logos {
-  background-color: #ecfffb;
+  background-color: #adffcb;
   margin-top: 20rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -789,8 +772,8 @@ footer h3 {
           flex: 1 1 20rem;
   margin: 4rem 2rem;
   max-width: 20rem;
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
+  -webkit-transition: all 320ms ease;
+  transition: all 320ms ease;
 }
 
 .logo4,
@@ -807,8 +790,8 @@ footer h3 {
 }
 
 .logos-wrapper:hover img:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
   -webkit-filter: blur(0px);
           filter: blur(0px);
   opacity: 1;
@@ -848,8 +831,8 @@ footer h3 {
   line-height: 0;
   -webkit-column-count: 3;
           column-count: 3;
-  -webkit-column-gap: 0px;
-          column-gap: 0px;
+  -webkit-column-gap: 0px !important;
+          column-gap: 0px !important;
 }
 
 .photo-grid img {
@@ -903,8 +886,9 @@ footer h3 {
 
 .contact-card {
   background-color: #272b2e;
-  min-height: 70vh;
+  min-height: 50vh;
   max-width: 100%;
+  margin-top: 5rem;
   padding: 2rem;
   border: 5px solid;
   border-image-slice: 1;
@@ -999,23 +983,24 @@ body.light {
 .skills-card.light p,
 .contact-card.light h3,
 .contact-card.light p {
-  color: black;
+  color: #131919;
 }
 
 .contact-card.light h4 {
-  color: black;
+  color: #131919;
 }
 
 .skills-card.light .top-icon .icon-bg {
-  background-color: black;
+  background-color: #131919;
 }
 
 .icons-collection.light svg path {
-  fill: black;
+  fill: #131919;
 }
 
 .skills-list.light > ul > li {
-  color: black;
+  color: #131919;
+  list-style-image: url("../svg/check-dark.svg");
 }
 
 .toggle-appearance.light svg path {
@@ -1035,32 +1020,13 @@ body.light {
   color: #131919;
 }
 
+footer.light {
+  background-color: #131919;
+}
+
 @media screen and (min-width: 1200px) {
-  .contact-card {
-    max-width: 50%;
-  }
-  .social-icons-footer {
-    width: 50%;
-  }
   .hero-section {
     min-height: 60vh;
-  }
-  .skills-section,
-  .work-section,
-  .contact-section {
-    margin-bottom: 20rem;
-  }
-  .work-section {
-    width: 60%;
-    margin: auto;
-  }
-  .work-card {
-    min-width: 40%;
-  }
-  .skills-section,
-  .photography {
-    width: 60%;
-    margin: auto;
   }
   .hero-wrapper {
     margin-top: 8rem;
@@ -1099,14 +1065,52 @@ body.light {
         -ms-flex: 1 1 40rem;
             flex: 1 1 40rem;
   }
+  .skills-section,
+  .work-section,
+  .contact-section {
+    margin-bottom: 20rem;
+  }
+  .skills-section,
+  .photography {
+    width: 60%;
+    margin: auto;
+  }
+  .work-section {
+    width: 60%;
+    margin: auto;
+  }
+  .work-card {
+    min-width: 40%;
+    max-width: 40%;
+  }
   .client-logos {
     min-height: 30vh;
   }
   .contact-card {
+    max-width: 50%;
     min-height: 50vh;
   }
   .contact-card p {
     padding: 0 4rem 0 4rem;
+  }
+  .social-icons-footer {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .work-section {
+    width: 95%;
+    margin: auto;
+  }
+  .work-card {
+    min-width: 30%;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .work-card {
+    min-width: 25%;
   }
 }
 /*# sourceMappingURL=main.css.map */
