--- a/style/main.css
+++ b/style/main.css
@@ -98,7 +98,7 @@ nav {
 
 #logo {
   z-index: 3;
-  color: black;
+  color: white;
 }
 
 .nav-overlay {
@@ -642,6 +642,16 @@ footer h3 {
   transition: all 500ms ease;
 }
 
+.skills-card:nth-child(6) {
+  max-width: 40rem;
+}
+
+.skills-card:nth-child(4) {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
 .icons-collection.icons-design {
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
@@ -727,8 +737,9 @@ footer h3 {
 }
 
 .client-logos {
-  background-color: #adffcb;
+  background-color: #ecfffb;
   margin-top: 20rem;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -747,6 +758,31 @@ footer h3 {
 .client-logos h2 {
   color: #131919;
   text-align: center;
+}
+
+.client-logos::before {
+  content: "";
+  width: 100%;
+  height: 0.5rem;
+  background: -webkit-gradient(linear, left top, right top, from(#00a295), to(#5dd98a));
+  background: linear-gradient(to right, #00a295, #5dd98a);
+  opacity: 0.75;
+}
+
+.client-logos::after {
+  content: "";
+  width: 100%;
+  height: 0.5rem;
+  background: -webkit-gradient(linear, left top, right top, from(#00a295), to(#5dd98a));
+  background: linear-gradient(to right, #00a295, #5dd98a);
+  opacity: 0.75;
+}
+
+.client-logos h2 {
+  position: absolute;
+  color: #ecfffb;
+  top: -15%;
+  opacity: 0.75;
 }
 
 .logos-wrapper {
@@ -795,6 +831,54 @@ footer h3 {
   -webkit-filter: blur(0px);
           filter: blur(0px);
   opacity: 1;
+}
+
+.testimonial-section {
+  width: 90%;
+  margin: auto;
+  margin-top: 20rem;
+}
+
+.testimonial-wrapper {
+  text-align: center;
+  opacity: 0.75;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.testimonial-wrapper h2,
+.testimonial-wrapper h4 {
+  margin-bottom: 3rem;
+}
+
+.testimonial-wrapper h2 {
+  font-size: 3rem;
+  line-height: 6rem;
+}
+
+.testimonial-wrapper h4 {
+  line-height: 4rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.testimonial-wrapper h2 span:nth-child(1) {
+  color: #00a295;
+}
+
+.testimonial-wrapper h2 span:nth-child(2) {
+  color: #5dd98a;
 }
 
 .photography {
@@ -859,7 +943,7 @@ footer h3 {
 .contact-section {
   width: 95%;
   margin: auto;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
   margin-top: 20rem;
 }
 
@@ -909,11 +993,19 @@ footer h3 {
           flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+  transition: all 200ms ease;
 }
 
 .contact-card p {
   text-align: center;
   line-height: 3.6rem;
+}
+
+.contact-card:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .about-header {
@@ -938,10 +1030,6 @@ footer h3 {
 
 body.light {
   background-color: white;
-}
-
-.nav-links.light ul li a {
-  color: black;
 }
 
 .hero-title.light {
@@ -1007,13 +1095,18 @@ body.light {
   fill: white;
 }
 
-.photos-overlay.light {
-  background-color: rgba(236, 255, 251, 0.9);
+.testimonial-wrapper.light h2,
+.testimonial-wrapper.light h4 {
+  color: #131919;
 }
 
-.photos-overlay.light h3,
-.photos-overlay.light p {
+.client-logos.light > h2 {
   color: #131919;
+  opacity: 0.5;
+}
+
+.photos-overlay.light {
+  background-color: rgba(72, 146, 139, 0.75);
 }
 
 .contact-wrapper.light h1 {
@@ -1066,25 +1159,50 @@ footer.light {
             flex: 1 1 40rem;
   }
   .skills-section,
-  .work-section,
-  .contact-section {
+  .work-section {
     margin-bottom: 20rem;
   }
-  .skills-section,
-  .photography {
+  .skills-section {
     width: 60%;
     margin: auto;
+    margin-top: 20rem;
   }
   .work-section {
     width: 60%;
     margin: auto;
   }
   .work-card {
-    min-width: 40%;
-    max-width: 40%;
+    max-width: 35%;
   }
   .client-logos {
     min-height: 30vh;
+  }
+  .client-logos h2 {
+    top: -20%;
+  }
+  .skills-card:nth-child(4) {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .skills-card {
+    max-width: 40rem;
+  }
+  .testimonial-section {
+    width: 60%;
+    margin: auto;
+    margin-top: 20rem;
+  }
+  .testimonial-wrapper h2 {
+    font-size: 4.4rem;
+  }
+  .testimonial-wrapper h4 {
+    font-size: 2.6rem;
+  }
+  .photography {
+    width: 75%;
+    margin: auto;
+    margin-top: 20rem;
   }
   .contact-card {
     max-width: 50%;
@@ -1092,6 +1210,9 @@ footer.light {
   }
   .contact-card p {
     padding: 0 4rem 0 4rem;
+  }
+  .contact-section {
+    margin-bottom: 5rem;
   }
   .social-icons-footer {
     width: 50%;
