--- a/style/main.scss
+++ b/style/main.scss
@@ -24,7 +24,7 @@ $green2: #5dd98a;
 }
 
 @mixin expand() {
-	transition: all 200ms;
+	transition: all 200ms ease;
 	&:hover {
 		transform: scale(1.05);
 	}
