bug fixes + updated about section

--- a/style/main.scss
+++ b/style/main.scss
@@ -13,6 +13,8 @@ $bg-color2: #353a3e;
 $prim-text-color: #ecfffb;
 $sec-text-color: #2d767f;
 $dark-card-color: #272b2e;
+// $green1: #21deba;
+// $green2: #66ed97;
 $green1: #00a295;
 $green2: #5dd98a;
 
