--- a/style/_body.scss
+++ b/style/_body.scss
@@ -391,36 +391,64 @@
 
 .contact-card {
 	background-color: $dark-card-color;
-	min-height: 50vh;
-	max-width: 100%;
+	// min-height: 50vh;
+	// max-width: 100%;
 	margin-top: 5rem;
-	padding: 2rem;
+	// padding: 2rem;
 	border: 5px solid;
 	border-image-slice: 1;
 	border-image-source: linear-gradient(to bottom right, $green1, $green2);
-	@include shadow();
-	@include flex(space-around, center, column);
 	flex-wrap: wrap;
 	transition: all 200ms ease;
+	overflow: hidden;
+	@include shadow();
 	p {
 		text-align: center;
 		line-height: 3.6rem;
 	}
 	@include expand();
-	// &:hover {
-	// 	h4,
-	// 	img {
-	// 		transform: translateY(-10%);
-	// 	}
-	// 	p {
-	// 		transform: translateY(10%);
-	// 	}
-	// };
 }
 
-.about-header {
-	@include flex(center, center, row);
-	img {
-		margin-right: 2rem;
+.about-content {
+	@include flex(space-between, center, row);
+	flex-wrap: wrap;
+	flex-shrink: 0;
+	// display: grid;
+	// grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+	min-width: 100%;
+	min-height: 100%;
+}
+
+.about-text {
+	@include flex(center, center, column);
+	flex: 2 1 35rem;
+	margin: 0 2rem 0 2rem;
+	// padding: 4rem;
+	h2,
+	p {
+		margin-bottom: 3rem;
+	}
+	h2 {
+		margin-top: 3rem;
+	}
+	p {
+		line-height: 3.4rem;
 	}
 }
+
+.about-image {
+	flex: 1 1 35rem;
+	width: 100%;
+	height: 60rem;
+	background-image: url("../img/IMG_1399.jpg");
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-size: cover;
+	// height: 100%;
+	// pointer-events: none;
+}
+// .nicholas-profile {
+// 	object-fit: cover;
+// 	width: 100%;
+// 	height: 100%;
+// }
