--- a/style/main.css
+++ b/style/main.css
@@ -970,31 +970,17 @@ footer h3 {
 
 .contact-card {
   background-color: #272b2e;
-  min-height: 50vh;
-  max-width: 100%;
   margin-top: 5rem;
-  padding: 2rem;
   border: 5px solid;
   border-image-slice: 1;
   border-image-source: linear-gradient(to bottom right, #00a295, #5dd98a);
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
   transition: all 200ms ease;
 }
 
@@ -1008,7 +994,29 @@ footer h3 {
           transform: scale(1.05);
 }
 
-.about-header {
+.about-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.about-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1018,14 +1026,39 @@ footer h3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 2;
+      -ms-flex: 2 1 35rem;
+          flex: 2 1 35rem;
+  margin: 0 2rem 0 2rem;
 }
 
-.about-header img {
-  margin-right: 2rem;
+.about-text h2,
+.about-text p {
+  margin-bottom: 3rem;
+}
+
+.about-text h2 {
+  margin-top: 3rem;
+}
+
+.about-text p {
+  line-height: 3.4rem;
+}
+
+.about-image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 35rem;
+          flex: 1 1 35rem;
+  width: 100%;
+  height: 60rem;
+  background-image: url("../img/IMG_1399.jpg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
 }
 
 body.light {
@@ -1162,11 +1195,6 @@ footer.light {
   .work-section {
     margin-bottom: 20rem;
   }
-  .skills-section {
-    width: 60%;
-    margin: auto;
-    margin-top: 20rem;
-  }
   .work-section {
     width: 60%;
     margin: auto;
@@ -1179,6 +1207,11 @@ footer.light {
   }
   .client-logos h2 {
     top: -20%;
+  }
+  .skills-section {
+    width: 60%;
+    margin: auto;
+    margin-top: 20rem;
   }
   .skills-card:nth-child(4) {
     -webkit-box-flex: 1;
@@ -1205,11 +1238,7 @@ footer.light {
     margin-top: 20rem;
   }
   .contact-card {
-    max-width: 50%;
-    min-height: 50vh;
-  }
-  .contact-card p {
-    padding: 0 4rem 0 4rem;
+    max-width: 75%;
   }
   .contact-section {
     margin-bottom: 5rem;
