--- a/style/_body.scss
+++ b/style/_body.scss
@@ -2,8 +2,7 @@
 
 .work-section {
 	@include width(95%);
-	// overflow-x: hidden;
-	// margin-bottom: 20rem;
+	margin-top: 20rem;
 	position: relative;
 }
 
@@ -41,7 +40,7 @@
 
 .work-card-header {
 	@include flex(center, center, row);
-	margin: 0 2rem;
+	margin: 0 3rem;
 	img {
 		max-width: 10rem;
 		min-width: 8rem;
@@ -84,8 +83,6 @@
 	@include width(95%);
 	position: relative;
 	margin-top: 20rem;
-	// overflow-x: hidden;
-	// margin-bottom: 20rem;
 }
 
 .skills-wrapper {
@@ -93,10 +90,6 @@
 	display: grid;
 	@include flex(center, center, row);
 	flex-wrap: wrap;
-	// grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
-	// grid-gap: 5rem;
-	// justify-content: center;
-	// align-content: center;
 }
 
 .skills-card {
@@ -216,14 +209,7 @@
 		color: $bg-color;
 		text-align: center;
 	}
-	&::before {
-		content: "";
-		width: 100%;
-		height: 0.5rem;
-		background: linear-gradient(to right, $green1, $green2);
-		// background-color: $green1;
-		opacity: 0.75;
-	}
+	&::before,
 	&::after {
 		content: "";
 		width: 100%;
@@ -255,7 +241,6 @@
 .logo5 {
 	flex: 1 1 20rem;
 	margin: 4rem 2rem;
-	// pointer-events: none;
 	max-width: 20rem;
 	transition: all 320ms ease;
 }
@@ -285,7 +270,6 @@
 
 .testimonial-wrapper {
 	text-align: center;
-	// opacity: 0.75;
 	@include flex(center, center, column);
 	h2,
 	h4 {
@@ -330,14 +314,15 @@
 	position: absolute;
 	min-width: 25rem;
 	z-index: 2;
-	background-color: rgba(40, 40, 40, 0.9);
+	background-color: rgba(72, 146, 139, 0.75);
+	// background-color: rgba(40, 40, 40, 0.9);
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	// border: 4px solid;
-	// border-image-slice: 1;
-	// border-image-source: linear-gradient(to bottom right, $green1, $green2);
 	@include shadow();
+	p {
+		font-weight: 600;
+	}
 }
 
 .photo-grid {
@@ -352,16 +337,6 @@
 	object-fit: cover;
 }
 
-// @media (max-width: 1200px) {
-// 	.photo-grid {
-// 		column-count: 4;
-// 	}
-// }
-// @media (max-width: 1000px) {
-// 	.photo-grid {
-// 		column-count: 3;
-// 	}
-// }
 @media (max-width: 800px) {
 	.photo-grid {
 		column-count: 2;
@@ -373,15 +348,15 @@
 	}
 }
 
-//CONTACT SECTION
+//about SECTION
 
-.contact-section {
+.about-section {
 	@include width(95%);
 	margin-bottom: 5rem;
 	margin-top: 20rem;
 }
 
-.contact-wrapper {
+.about-wrapper {
 	@include flex(center, center, column);
 	h1 {
 		text-align: center;
@@ -389,13 +364,10 @@
 	}
 }
 
-.contact-card {
+.about-card {
 	background-color: $dark-card-color;
-	// min-height: 50vh;
-	// max-width: 100%;
 	margin-top: 5rem;
-	// padding: 2rem;
-	border: 5px solid;
+	border: 7px solid;
 	border-image-slice: 1;
 	border-image-source: linear-gradient(to bottom right, $green1, $green2);
 	flex-wrap: wrap;
@@ -413,8 +385,6 @@
 	@include flex(space-between, center, row);
 	flex-wrap: wrap;
 	flex-shrink: 0;
-	// display: grid;
-	// grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 	min-width: 100%;
 	min-height: 100%;
 }
@@ -423,7 +393,7 @@
 	@include flex(center, center, column);
 	flex: 2 1 35rem;
 	margin: 0 2rem 0 2rem;
-	// padding: 4rem;
+	padding: 4rem;
 	h2,
 	p {
 		margin-bottom: 3rem;
@@ -432,7 +402,7 @@
 		margin-top: 3rem;
 	}
 	p {
-		line-height: 3.4rem;
+		line-height: 4rem;
 	}
 }
 
