--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -7,8 +7,11 @@ nav {
 }
 
 #logo {
-	z-index: 3;
-	color: white;
+	z-index: 2;
+	svg {
+		height: 5rem;
+		width: 100%;
+	}
 }
 
 .nav-overlay {
@@ -25,8 +28,7 @@ nav {
 }
 
 .nav-header {
-	width: 95%;
-	margin: auto;
+	@include width(95%);
 	padding: 1rem;
 	@include flex(space-between, center, row);
 }
@@ -73,37 +75,6 @@ body.hide {
 	top: 50%;
 	transform: translate(-50%, -50%);
 	font-size: 4rem;
-	ul {
-		@include flex(space-around, center, column);
-	}
-	li a {
-		color: white;
-		font-size: 4rem;
-		line-height: 5rem;
-		font-weight: 700;
-	}
-}
-
-.nav-links > ul > li {
-	&:hover {
-		color: white;
-	}
-	&::before {
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 2px;
-		bottom: 0;
-		left: 0;
-		background-color: #000;
-		visibility: hidden;
-		transform: scaleX(0);
-		transition: all 0.3s ease-in-out 0s;
-	}
-	&:hover::before {
-		visibility: visible;
-		transform: scaleX(1);
-	}
 }
 
 .nav-link-item {
@@ -215,5 +186,13 @@ footer {
 	width: 100%;
 	ul {
 		@include flex(space-around, center, row);
+	}
+}
+
+.cta-footer {
+	margin-bottom: 3rem;
+	@include flex(space-evenly, center, row);
+	h1 {
+		margin-right: 4rem;
 	}
 }
