--- a/style/_body.scss
+++ b/style/_body.scss
@@ -1,7 +1,7 @@
 //WORK SECTION
 
 .work-section {
-	@include width(95%);
+	@include width(98%);
 	margin-top: 20rem;
 	position: relative;
 }
@@ -14,7 +14,7 @@
 .work-card {
 	background-color: $dark-card-color;
 	min-height: 50vh;
-	min-width: 90%;
+	min-width: 95%;
 	margin: 4rem 2rem;
 	padding: 4rem 3rem;
 	border: 1px solid #242424;
@@ -208,6 +208,7 @@
 	h2 {
 		color: $bg-color;
 		text-align: center;
+		font-size: 3.6rem;
 	}
 	&::before,
 	&::after {
@@ -222,7 +223,7 @@
 .client-logos h2 {
 	position: absolute;
 	color: $prim-text-color;
-	top: -15%;
+	top: -17%;
 	opacity: 0.75;
 }
 
@@ -407,10 +408,10 @@
 }
 
 .about-image {
-	flex: 1 1 35rem;
+	flex: 1 1 40rem;
 	width: 100%;
 	height: 60rem;
-	background-image: url("../img/IMG_1399.jpg");
+	background-image: url("../img/IMG_1399_opt.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-size: cover;
