--- a/style/_global.scss
+++ b/style/_global.scss
@@ -69,7 +69,7 @@ a {
 	padding: 1.5rem 4rem;
 	background: linear-gradient(to bottom right, $green1, $green2);
 	text-align: center;
-	margin: 2rem 0;
+	// margin: 2rem 0;
 	color: white;
 	font-weight: 600;
 	font-size: 1.8rem;
