--- a/style/_media.scss
+++ b/style/_media.scss
@@ -1,6 +1,10 @@
 @media screen and (min-width: 1200px) {
 	//NAV/HERO
 
+	#logo {
+		transform: scale(0.65);
+	}
+
 	.hero-section {
 		min-height: 60vh;
 	}
@@ -44,7 +48,7 @@
 	}
 
 	.work-card {
-		max-width: 35%;
+		max-width: 45%;
 		padding: 6rem;
 	}
 
@@ -119,5 +123,14 @@
 @media screen and (min-width: 800px) {
 	.work-card {
 		min-width: 25%;
+	}
+}
+
+@media screen and (min-width: 500px) {
+	.nav-links {
+		h2 {
+			font-size: 2rem;
+			margin: 0;
+		}
 	}
 }
