--- a/style/main.css
+++ b/style/main.css
@@ -73,7 +73,6 @@ a {
   background: -webkit-gradient(linear, left top, right bottom, from(#00a295), to(#5dd98a));
   background: linear-gradient(to bottom right, #00a295, #5dd98a);
   text-align: center;
-  margin: 2rem 0;
   color: white;
   font-weight: 600;
   font-size: 1.8rem;
@@ -98,6 +97,8 @@ nav {
 
 #logo {
   z-index: 2;
+  -webkit-transform: scale(0.55);
+          transform: scale(0.55);
 }
 
 #logo svg {
@@ -148,6 +149,22 @@ body.hide {
 .appearance-toggle {
   cursor: pointer;
   z-index: 2;
+  position: relative;
+}
+
+.appearance-toggle i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.dark-bg {
+  height: 3rem;
+  width: 3rem;
+  background-color: white;
+  border-radius: 50%;
 }
 
 .appearance-toggle #toggle-bg {
@@ -188,12 +205,35 @@ body.hide {
 }
 
 .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-size: 4rem;
+}
+
+.nav-links i {
+  color: white;
+  margin-right: 2rem;
+  -webkit-transform: scale(0.85);
+          transform: scale(0.85);
+  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .nav-link-item {
@@ -211,10 +251,6 @@ body.hide {
       -ms-flex-direction: row;
           flex-direction: row;
   margin: 2rem;
-}
-
-.nav-link-item svg {
-  margin-right: 2rem;
 }
 
 .nav-link-item h2 {
@@ -243,6 +279,10 @@ body.hide {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+.social-icons i {
+  color: white;
 }
 
 .hero-section {
@@ -385,14 +425,18 @@ footer h3 {
           flex-direction: row;
 }
 
+.social-icons-footer i {
+  color: white;
+}
+
 .cta-footer {
-  margin-bottom: 3rem;
+  margin: 0 3rem 2rem 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -403,11 +447,13 @@ footer h3 {
 }
 
 .cta-footer h1 {
-  margin-right: 4rem;
+  text-align: center;
+  font-size: 4rem;
+  margin-right: 2rem;
 }
 
 .work-section {
-  width: 95%;
+  width: 98%;
   margin: auto;
   margin-top: 20rem;
   position: relative;
@@ -434,7 +480,7 @@ footer h3 {
 .work-card {
   background-color: #272b2e;
   min-height: 50vh;
-  min-width: 90%;
+  min-width: 95%;
   margin: 4rem 2rem;
   padding: 4rem 3rem;
   border: 1px solid #242424;
@@ -737,6 +783,7 @@ footer h3 {
 .client-logos h2 {
   color: #131919;
   text-align: center;
+  font-size: 3.6rem;
 }
 
 .client-logos::before, .client-logos::after {
@@ -751,7 +798,7 @@ footer h3 {
 .client-logos h2 {
   position: absolute;
   color: #ecfffb;
-  top: -15%;
+  top: -17%;
   opacity: 0.75;
 }
 
@@ -1025,11 +1072,11 @@ footer h3 {
 
 .about-image {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 35rem;
-          flex: 1 1 35rem;
+      -ms-flex: 1 1 40rem;
+          flex: 1 1 40rem;
   width: 100%;
   height: 60rem;
-  background-image: url("../img/IMG_1399.jpg");
+  background-image: url("../img/IMG_1399_opt.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -1098,8 +1145,12 @@ body.light {
   list-style-image: url("../svg/check-dark.svg");
 }
 
-.toggle-appearance.light svg path {
-  fill: white;
+.fas.light {
+  color: white;
+}
+
+.dark-bg.light {
+  background-color: #131919;
 }
 
 .testimonial-wrapper.light h2,
@@ -1126,6 +1177,10 @@ footer.light {
 }
 
 @media screen and (min-width: 1200px) {
+  #logo {
+    -webkit-transform: scale(0.65);
+            transform: scale(0.65);
+  }
   .hero-section {
     min-height: 60vh;
   }
@@ -1176,7 +1231,7 @@ footer.light {
     margin-top: 20rem;
   }
   .work-card {
-    max-width: 35%;
+    max-width: 45%;
     padding: 6rem;
   }
   .client-logos {
@@ -1238,6 +1293,13 @@ footer.light {
 @media screen and (min-width: 800px) {
   .work-card {
     min-width: 25%;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .nav-links h2 {
+    font-size: 2rem;
+    margin: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
