--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -12,6 +12,7 @@ nav {
 	svg {
 		height: 5rem;
 		width: 100%;
+		text-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
 	}
 }
 
@@ -55,10 +56,11 @@ body.hide {
 }
 
 .dark-bg {
-	height: 3rem;
-	width: 3rem;
+	height: 2.7rem;
+	width: 2.7rem;
 	background-color: white;
 	border-radius: 50%;
+	text-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
 }
 
 .appearance-toggle #toggle-bg {
@@ -91,41 +93,30 @@ body.hide {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	font-size: 4rem;
 	i {
 		color: white;
-		margin-right: 2rem;
-		transform: scale(0.85);
-		text-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
+		margin-right: 1.6rem;
+		transform: scale(0.75);
+		// text-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
+	}
+	h2 {
+		font-size: 4rem;
 	}
 }
 
 .nav-link-item {
 	@include flex(center, center, row);
-	margin: 2rem;
+	margin: 1.8rem;
 }
 
 .nav-link-item h2 {
 	color: white;
-	text-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
+	// text-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
 }
-
-// .nav-links li:nth-child(1) {
-// 	list-style-image: url("../svg/metro-wrench.svg");
-// }
-// .nav-links li:nth-child(2) {
-// 	list-style-image: url("../svg/Icon\ awesome-hammer.svg");
-// }
-// .nav-links li:nth-child(3) {
-// 	list-style-image: url("../svg/Icon\ awesome-trophy.svg");
-// }
-// .nav-links li:nth-child(4) {
-// 	list-style-image: url("../svg/Icon\ material-email.svg");
-// }
 
 .social-icons {
 	padding: 2rem;
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	bottom: 0;
 	left: 0;
@@ -193,7 +184,6 @@ body.hide {
 
 footer {
 	@include flex(center, center, column);
-	// background: linear-gradient(to bottom right, $green1, $green2);
 	// background-color: #00201d;
 
 	padding: 2rem 0;
