--- a/style/main.css
+++ b/style/main.css
@@ -104,6 +104,7 @@ nav {
 #logo svg {
   height: 5rem;
   width: 100%;
+  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .nav-overlay {
@@ -161,10 +162,11 @@ body.hide {
 }
 
 .dark-bg {
-  height: 3rem;
-  width: 3rem;
+  height: 2.7rem;
+  width: 2.7rem;
   background-color: white;
   border-radius: 50%;
+  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .appearance-toggle #toggle-bg {
@@ -225,15 +227,17 @@ body.hide {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: 4rem;
 }
 
 .nav-links i {
   color: white;
-  margin-right: 2rem;
-  -webkit-transform: scale(0.85);
-          transform: scale(0.85);
-  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  margin-right: 1.6rem;
+  -webkit-transform: scale(0.75);
+          transform: scale(0.75);
+}
+
+.nav-links h2 {
+  font-size: 4rem;
 }
 
 .nav-link-item {
@@ -250,17 +254,16 @@ body.hide {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 2rem;
+  margin: 1.8rem;
 }
 
 .nav-link-item h2 {
   color: white;
-  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .social-icons {
   padding: 2rem;
-  position: fixed;
+  position: absolute;
   width: 100%;
   bottom: 0;
   left: 0;
@@ -608,9 +611,9 @@ footer h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: space-evenly;
+      -ms-flex-align: space-evenly;
+          align-items: space-evenly;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -1054,7 +1057,7 @@ footer h3 {
       -ms-flex: 2 1 35rem;
           flex: 2 1 35rem;
   margin: 0 2rem 0 2rem;
-  padding: 4rem;
+  padding: 4rem 2rem;
 }
 
 .about-text h2,
@@ -1302,13 +1305,6 @@ footer.light {
 @media screen and (min-width: 800px) {
   .work-card {
     min-width: 25%;
-  }
-}
-
-@media screen and (min-width: 500px) {
-  .nav-links h2 {
-    font-size: 2rem;
-    margin: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
