--- a/style/_body.scss
+++ b/style/_body.scss
@@ -117,6 +117,9 @@
 		grid-gap: 1.8rem;
 		transition: all 500ms ease;
 	}
+	li {
+		@include expand();
+	}
 }
 
 .skills-card:nth-child(6) {
@@ -326,6 +329,18 @@
 	}
 }
 
+.img1,
+.img2,
+.img3,
+.img4,
+.img5,
+.img6,
+.img7,
+.img8,
+.img9 {
+	@include expand();
+}
+
 .photo-grid {
 	line-height: 0;
 	column-count: 3;
@@ -349,7 +364,7 @@
 	}
 }
 
-//about SECTION
+//ABOUT SECTION
 
 .about-section {
 	@include width(95%);
@@ -411,10 +426,8 @@
 	flex: 1 1 40rem;
 	width: 100%;
 	height: 60rem;
-	background-image: url("../img/IMG_1399_opt.jpg");
+	background-image: url("../img/IMG_1399_opt-2.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-size: cover;
-	// height: 100%;
-	// pointer-events: none;
 }
