--- a/style/_media.scss
+++ b/style/_media.scss
@@ -119,6 +119,9 @@
 	.work-card {
 		min-width: 30%;
 	}
+	.nav-link-item {
+		margin-bottom: 4rem;
+	}
 }
 @media screen and (min-width: 800px) {
 	.work-card {
